<resources>
    <string name="app_name">InstagramAPP</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="header_of_app">header of the app</string>
    <string name="username">Username</string>
    <string name="logout">LogOut</string>
    <string name="or_login">or, Login</string>
    <string name="bottom_gradient_associated_with_the_top_right_round_corners_xml">this is the bottom gradient witch is asosiated with the top_right_round_corners.XML</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="friends">Friends</string>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

</resources>
